commit for class example of pulling repository branches

--- a/_static/index.html
+++ b/_static/index.html
@@ -275,7 +275,7 @@
             
             <p class="header-subtitle"><button style="font-size: 1.25em; padding: 10px;" id="myBtn">AMBUCS <span style="color: red">100th</span> Anniversary Gala Info</button></p>
 
-            <h1 class="hero-title">Welcome to AMBUCS - Altoona PA</h1>
+            <h1 class="hero-title"></h1>
 <p class="header-subtitle"><em>"Inspiring Mobility and Independence"</em><br>(with over 150 chapters nationwide)</p>
 <!--<p class="header-subtitle">Find us on Facebook for the newest and most up-to-date information.</p>-->
 
